--- a/social-media/src/components/PostForm/PostForm.css
+++ b/social-media/src/components/PostForm/PostForm.css
@@ -19,3 +19,13 @@
         width: 225px;
     }
 }
+.loading-screen {
+  position: fixed;  
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.4);  
+  backdrop-filter: blur(3px);      
+  z-index: 9999;     
+}
