--- a/social-media/src/components/accountCreation/createaccount.css
+++ b/social-media/src/components/accountCreation/createaccount.css
@@ -86,14 +86,13 @@
 }
 
 .loading-screen {
-  position: fixed;
+  position: fixed;  
   inset: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(160, 160, 160.3); /* ⬅️ Slightly transparent black overlay */
-  backdrop-filter: blur(4px);          /* ⬅️ Stronger blur for glass effect */
-  -webkit-backdrop-filter: blur(4px);  
-  z-index: 9999;
+  background: rgba(0, 0, 0, 0.4);  
+  backdrop-filter: blur(3px);      
+  z-index: 9999;     
 }
 
